--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "description": "OSBR Junior Backend Assessment",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec node --loader ts-node/esm src/server.ts",
-    "test": "vitest"
+    "lint": "eslint . --ext .ts",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["shopping-cart", "REST API", "typescript", "backend"],
+  "author": "Mirza",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
